# Python-HTML

./: README.md  setup.cfg
src/phtml5/: __init__.py  htmlelement.py  tags.py
src/phtml5/tools/: generator.py  html5.json
