[metadata]
name = phtml5
version = 1.0.0
description = Type safe HTML DSL for Python.
author = Thomas Poelman
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    phtml5
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.package_data]
phtml5 = py.typed
